Update nav bar and create multipage

--- a/footage.html
+++ b/footage.html
@@ -49,16 +49,72 @@
 
     <!-- main  -->
     <main>
-        <section class="banner" id="banner">
-            <div class="banner-text">
-                <h1>IceLand</h1>
-                <P>Iceland Travel offers a great selection of Iceland tours, including self drive tours, road trips,
-                    guided tours and day
-                    tours. Book online.</P>
-                <a href="sights.html" class="btn btn-get"><span>Explore</span></a>
+        <section class="media" id="media">
+            <div class="main-text">
+                <h2>Media</h2>
+                <h1>Iceland in Footage</h1>
             </div>
-            <div class="overlay2">
-
+            <div class="main-container">
+                <div class="image image-1">
+                    <img src="https://images.unsplash.com/photo-1617191979724-f755c6d83e01?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
+                        alt="Erupting Volcano">
+                    <h3>Erupting Volcano</h3>
+                </div>
+                <div class="image image-2">
+                    <img src="https://images.unsplash.com/photo-1516832970803-325be7a92aa5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
+                        alt="Icelandic horses ">
+                    <h3>Icelandic horses</h3>
+                </div>
+                <div class="image image-3">
+                    <img src="https://images.unsplash.com/photo-1489782419474-4d4221dc5b10?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="Hvítserkur">
+                    <h3>Hvítserkur</h3>
+                </div>
+                <div class="image image-4">
+                    <img src="https://images.unsplash.com/photo-1540503831458-3237544b2ce5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1141&q=80"
+                        alt="Flatey village">
+                    <h3>Flatey village</h3>
+                </div>
+                <div class="image image-5">
+                    <img src="https://images.unsplash.com/photo-1512419180521-2c5585bdf851?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="Parliament of Puffins">
+                    <h3>Parliament of Puffins</h3>
+                </div>
+                <div class="image image-6">
+                    <img src="https://images.unsplash.com/photo-1551098955-f124915c1ff3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                        alt=" Iceland Beach">
+                    <h3>Iceland Beach</h3>
+                </div>
+                <div class="image image-7">
+                    <img src="https://images.unsplash.com/photo-1615130767419-e9ff3afa5a15?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1054&q=80"
+                        alt="Reykjavík City">
+                    <h3>Reykjavík City</h3>
+                </div>
+                <div class="image image-8">
+                    <img src="https://images.unsplash.com/photo-1477442229003-02551413eaad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="Skogafoss Waterfall">
+                    <h3>Skogafoss Waterfall</h3>
+                </div>
+                <div class="image image-9">
+                    <img src="https://images.unsplash.com/photo-1572587356426-b33bf42f999b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
+                        alt="Iceland Caves">
+                    <h3>Iceland Caves</h3>
+                </div>
+                <div class="image image-10">
+                    <img src="https://images.unsplash.com/photo-1525624160868-97095e12e633?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80"
+                        alt="Gigjökull">
+                    <h3>Gigjökull</h3>
+                </div>
+                <div class="image image-11">
+                    <img src="https://images.unsplash.com/photo-1475518845976-0fd87b7e4e5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="Aurora">
+                    <h3>Aurora</h3>
+                </div>
+                <div class="image image-12">
+                    <img src="https://images.unsplash.com/photo-1536007379435-ba39ac15caae?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=886&q=80"
+                        alt="Solheimasandur Plane Wreck">
+                    <h3>Solheimasandur Plane Wreck</h3>
+                </div>
             </div>
         </section>
     </main>
