--- a/sights.html
+++ b/sights.html
@@ -49,17 +49,63 @@
 
     <!-- main  -->
     <main>
-        <section class="banner" id="banner">
-            <div class="banner-text">
-                <h1>IceLand</h1>
-                <P>Iceland Travel offers a great selection of Iceland tours, including self drive tours, road trips,
-                    guided tours and day
-                    tours. Book online.</P>
-                <a href="sights.html" class="btn btn-get"><span>Explore</span></a>
-            </div>
-            <div class="overlay2">
 
+        <!-- explore  -->
+        <section class="explore" id="explore">
+            <div class="main-text">
+                <h2>Explore</h2>
+                <h1><span>I</span>ce World</h1>
+                <p>This place amazes with its fabulous atmosphere and nature</p>
             </div>
+            <div class="main-container">
+                <div class="image-box image-1">
+                    <img src="https://images.unsplash.com/photo-1603226851957-1768f812309b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="">
+                    <div class="overlay"></div>
+                    <div class="image-box-text">
+                        <h2>Gullfose</h2>
+                        <p>Enchanting Waterfall</p>
+                    </div>
+                </div>
+                <div class="image-box image-1">
+                    <img src="https://images.unsplash.com/photo-1534804101463-987ef0c79d54?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+                        alt="">
+                    <div class="overlay"></div>
+                    <div class="image-box-text">
+                        <h2>Reykjavik</h2>
+                        <p>Capital of Iceland</p>
+                    </div>
+                </div>
+                <div class="image-box image-1">
+                    <img src="https://images.unsplash.com/photo-1556554883-5701482655e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        alt="">
+                    <div class="overlay"></div>
+                    <div class="image-box-text">
+                        <h2>Myvatn</h2>
+                        <p>Famous Lake</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-view-all">
+                View More
+            </button>
+        </section>
+
+        <!-- about  -->
+        <section class="about" id="about">
+            <div class="main-text">
+                <h2>About</h2>
+                <h1>Unforgettable <span>S</span>ensations</h1>
+                <p>Iceland adventure is a tours of the best places in iceland. We will help make your trip perfect, find
+                    the chepest tickets, Book the best hotels Nothing will stop you from enjoying the atmosphere of the
+                    ice country.</p>
+            </div>
+            <div class="main-container">
+                <video
+                    src="https://assets.mixkit.co/videos/preview/mixkit-aerial-view-of-lush-river-valley-and-snowy-mountains-15919-large.mp4"
+                    autoplay loop muted></video>
+            </div>
+
         </section>
     </main>
 
