--- a/contact.html
+++ b/contact.html
@@ -49,16 +49,30 @@
 
     <!-- main  -->
     <main>
-        <section class="banner" id="banner">
-            <div class="banner-text">
-                <h1>IceLand</h1>
-                <P>Iceland Travel offers a great selection of Iceland tours, including self drive tours, road trips,
-                    guided tours and day
-                    tours. Book online.</P>
-                <a href="sights.html" class="btn btn-get"><span>Explore</span></a>
+        <section class="contact" id="contact">
+            <div class="main-text">
+                <h2>Contact</h2>
+                <h1>Get in touch</h1>
             </div>
-            <div class="overlay2">
-
+            <div class="main-container">
+                <form action="#">
+                    <div class="name">
+                        <label for="name">Name</label>
+                        <input type="text" placeholder="Enter Your name " id="name" name="name">
+                    </div>
+                    <div class="phone">
+                        <label for="phone">Email or Phone</label>
+                        <input type="text" name="phone" id="phone" placeholder="Enter Your Number or phone">
+                    </div>
+                    <div class="message">
+                        <label for="message">Your message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"
+                            placeholder="Tell us about your interests passion needs and any other details relevent to your trip"></textarea>
+                    </div>
+                    <button class="btn-send">
+                        Send
+                    </button>
+                </form>
             </div>
         </section>
     </main>
