--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <main>
         <section class="banner" id="banner">
             <div class="banner-text">
-                <h1>IceLand</h1>
-                <P>Iceland Travel offers a great selection of Iceland tours, including self drive tours, road trips,
-                    guided tours and day
+                <h1>Kazbegi</h1>
+                <P>Kazbegi Travel offers a great selection of local tours, including hiking, mountain climbing and 
+                    guided day
                     tours. Book online.</P>
                 <a href="sights.html" class="btn btn-get"><span>Explore</span></a>
             </div>
@@ -73,9 +73,9 @@
         </div>
         <div class="main-container">
             <div class="heading-foo">
-                <img src="public/images/logo/iceland.svg" alt="">
-                <h1>Iceland</h1>
-                <p>EVERYTHING IS EXPENSIVE IN ICELAND, ESPECIALLY FOOD, AND ESPECIALLY HEALTHY FOOD</p>
+                <img src="public/images/logo/mountain.png" alt="">
+                <h1>Kazbegi</h1>
+                <p>Kazbegi is amazing, not only with sights but also with cousine and Georgian food. </p>
             </div>
             <div class="social-media">
                 <h1>Connect with us</h1>
@@ -112,13 +112,10 @@
             <div class="contact-info">
                 <h1>Contacts</h1>
                 <div class="contact-info-text">
-                    <p>(480) 125 4568</p>
-                    <p>iceland@help.com</p>
+                    <p>(+995) 555 123456</p>
+                    <p>kazbegi@help.com</p>
                 </div>
             </div>
-        </div>
-        <div class="credit">
-            <h3>🖥️ Design and Developed By 🧑<a href="https://github.com/SM8UTI"> Sm8uti</a></h3>
         </div>
     </footer>
     <!-- ----- -->
