--- a/tours.html
+++ b/tours.html
@@ -184,9 +184,9 @@
         </div>
         <div class="main-container">
             <div class="heading-foo">
-                <img src="public/images/logo/iceland.svg" alt="">
-                <h1>Iceland</h1>
-                <p>EVERYTHING IS EXPENSIVE IN ICELAND, ESPECIALLY FOOD, AND ESPECIALLY HEALTHY FOOD</p>
+                <img src="public/images/logo/mountain.png" alt="">
+                <h1>Kazbegi</h1>
+                <p>Kazbegi is amazing, not only with sights but also with cousine and Georgian food. </p>
             </div>
             <div class="social-media">
                 <h1>Connect with us</h1>
@@ -223,13 +223,10 @@
             <div class="contact-info">
                 <h1>Contacts</h1>
                 <div class="contact-info-text">
-                    <p>(480) 125 4568</p>
-                    <p>iceland@help.com</p>
+                    <p>(+995) 555 123456</p>
+                    <p>kazbegi@help.com</p>
                 </div>
             </div>
-        </div>
-        <div class="credit">
-            <h3>🖥️ Design and Developed By 🧑<a href="https://github.com/SM8UTI"> Sm8uti</a></h3>
         </div>
     </footer>
     <!-- ----- -->
