update navbar active state

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     <li><a href="sights.html">Sights</a></li>
                     <li><a href="footage.html">Footage</a></li>
                     <li><a href="tours.html">Tours</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="ham-menu">
