--- a/sights.html
+++ b/sights.html
@@ -34,7 +34,7 @@
             <div class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sights.html">Sights</a></li>
+                    <li class="active"><a href="sights.html">Sights</a></li>
                     <li><a href="footage.html">Footage</a></li>
                     <li><a href="tours.html">Tours</a></li>
                     <li><a href="contact.html">Contact</a></li>
