--- a/footage.html
+++ b/footage.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sights.html">Sights</a></li>
-                    <li><a href="footage.html">Footage</a></li>
+                    <li class="active"><a href="footage.html">Footage</a></li>
                     <li><a href="tours.html">Tours</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
