--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="right-part">
             <div class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="sights.html">Sights</a></li>
                     <li><a href="footage.html">Footage</a></li>
                     <li><a href="tours.html">Tours</a></li>
