fix footer logo

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
         </div>
         <div class="main-container">
             <div class="heading-foo">
-                <img src="public/images/logo/mountain.png" alt="">
-                <h1>Kazbegi</h1>
+                <span>
+                    <h1>Kazbegi</h1>
+                    <img src="public/images/logo/mountain.png" alt="">
+                </span>
                 <p>Kazbegi is amazing, not only with sights but also with cousine and Georgian food. </p>
             </div>
             <div class="social-media">
