--- a/tours.html
+++ b/tours.html
@@ -24,9 +24,9 @@
     <header class="primary-header">
         <div class="left-part">
             <a href="index.html">
-                <img src="public/images/logo/iceland.svg" alt="">
+                <img src="public/images/logo/mountain.png" alt="">
                 <div class="logo">
-                    <h1>I<span>ce</span>land</h1>
+                    <h1>Kazbegi</h1>
                 </div>
             </a>
         </div>
