--- a/footage.html
+++ b/footage.html
@@ -50,7 +50,7 @@
 
     <!-- main  -->
     <main>
-        <section class="media" id="media">
+        <section class="footage" id="footage">
             <div class="main-text">
                 <h1>Kazbegi in Footage</h1>
             </div>
