--- a/footage.html
+++ b/footage.html
@@ -57,8 +57,8 @@
             <div class="main-container">
                 <div class="image image-1">
                     <img src="https://images.unsplash.com/photo-1692262211862-26f4555ef0b7?q=80&w=2533&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                        alt="Holy Trinity  Monastery">
-                    <h3>Holy Trinity  Monastery</h3>
+                        alt="Gergeti Trinity  Monastery">
+                    <h3>Gergeti Trinity  Monastery</h3>
                 </div>
                 <div class="image image-2">
                     <img src="https://images.unsplash.com/photo-1564774923241-9bfc1c2911d6?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
