--- a/sights.html
+++ b/sights.html
@@ -86,23 +86,19 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-view-all">
-                View More
-            </button>
-        </section>
 
+        </section>
         <!-- about  -->
         <section class="about" id="about">
             <div class="main-text">
-                <h2>About</h2>
-                <h1>Unforgettable <span>S</span>ensations</h1>
+                <h1>Unforgettable Sensations</h1>
                 <p>Iceland adventure is a tours of the best places in iceland. We will help make your trip perfect, find
                     the chepest tickets, Book the best hotels Nothing will stop you from enjoying the atmosphere of the
                     ice country.</p>
             </div>
             <div class="main-container">
                 <video
-                    src="https://assets.mixkit.co/videos/preview/mixkit-aerial-view-of-lush-river-valley-and-snowy-mountains-15919-large.mp4"
+                    src="public/images/mountains.mp4"
                     autoplay loop muted></video>
             </div>
 
