--- a/tours.html
+++ b/tours.html
@@ -52,7 +52,6 @@
     <main>
         <section class="tour" id="tour">
             <div class="main-text">
-                <h2>2021</h2>
                 <h1>Tours</h1>
             </div>
             <div class="main-container">
@@ -169,19 +168,13 @@
                 </div>
                 <!-- ------ -->
             </div>
-            <button class="btn btn-view-all">
-                View More
-            </button>
+            <div class="individual-tours">
+                <a href="">Contact us</a> for Individual Tours
+            </div>
         </section>
     </main>
 
-    <!-- footer -->
     <footer>
-        <div class="footer-image">
-            <div class="overlay1"></div>
-            <div class="overlay2"></div>
-
-        </div>
         <div class="main-container">
             <div class="heading-foo">
                 <span>
@@ -231,7 +224,6 @@
             </div>
         </div>
     </footer>
-    <!-- ----- -->
 
     <script src="public/js/main.js"></script>
 </body>
