--- a/tours.html
+++ b/tours.html
@@ -62,19 +62,16 @@
                             alt="Blue Lagoon">
                         <div class="overlay"></div>
                         <div class="image-box-text">
-                            <h2>Blue Lagoon</h2>
-                            <p>Beach Resort</p>
+                            <h2>Caucasus Mountains</h2>
+                            <p>Mtiuleti</p>
                         </div>
 
                     </div>
                     <div class="tour-cards-text">
-                        <h1>Blue Lagoon 1 Week Trip </h1>
-                        <p>A Week long trip around the iceland with a tour of the most famous sights of the island of
-                            sages.The Blue Lagoon is a geothermal spa in southwestern Iceland. The spa is located in a
-                            lava field near Grindavík and in
-                            front of Mount Þorbjörn on Reykjanes Peninsula, in a location favourable for geothermal
-                            power, and is supplied by water
-                            used in the nearby Svartsengi geothermal power station.</p>
+                        <h1>Hike in the Mountains </h1>
+                        <p>Trekking in the high Caucasus Mountains of Georgia - Kazbegi National Park, Mtiuleti, 
+                            and Khevi regions includes visiting Gergeti Trinity Church and Gergeti Glacier,
+                             Truso Valley, village Juta, and hiking up to Chaukhi mountains to the small alpine lake.</p>
                         <a href="#" class="btn-map">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" stroke-width="2">
@@ -86,8 +83,8 @@
                             <span>View Route Map</span>
                         </a>
                         <div class="price">
-                            <p>$4540 <span>Per person</span></p>
-                            <h2>9 Days 18 Nights</h2>
+                            <p>$450 <span>Per person</span></p>
+                            <h2>3 Days 2 Nights</h2>
                         </div>
                     </div>
                 </div>
@@ -99,19 +96,16 @@
                             alt="West Iceland">
                         <div class="overlay"></div>
                         <div class="image-box-text">
-                            <h2>West Iceland</h2>
-                            <p>Valleys & Volcanoes</p>
+                            <h2>Mount Kazbeg</h2>
+                            <p>Glacier & Snow</p>
                         </div>
 
                     </div>
                     <div class="tour-cards-text">
-                        <h1>West Iceland Family Trip</h1>
-                        <p>A Week long family trip around the west iceland with a tour of the most famous sights of the
-                            island likes valleys and volcanoes etc.The west of Iceland is an enormous area characterized
-                            by fjords, valleys, volcanoes and craters. The most famous
-                            attraction in the west is undoubtedly the Snæfellsnes peninsula that is home to the mighty
-                            Snaefellsjokull glacier as
-                            well as mt. Kirkjufell, also known as the arrowhead mountain from Game of Thrones.</p>
+                        <h1>Mount Kazbeg Tour</h1>
+                        <p>If mountain climbing and trekking is not just a physical challenge for you and you enjoy breathtaking views, mythology and romantic adventures, 
+                            Kazbeg is a mountain you definitely should climb. Mount Kazbek is one of the most beautiful and most climbed mountains on the Caucasian ridge. 
+                            Technically Kazbek is less difficult than other 5000+ m Caucasus summits – another fact making Mount Kazbeg so attractive.</p>
                         <a href="#" class="btn-map">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" stroke-width="2">
@@ -123,8 +117,8 @@
                             <span>View Route Map</span>
                         </a>
                         <div class="price">
-                            <p>$2549 <span>Per person</span></p>
-                            <h2>12 Days 24 Nights</h2>
+                            <p>$900 <span>Per person</span></p>
+                            <h2>3 Days 2 Nights</h2>
                         </div>
                     </div>
                 </div>
@@ -137,19 +131,18 @@
                             alt="Stakkholtsgja canyon ">
                         <div class="overlay"></div>
                         <div class="image-box-text">
-                            <h2>Stakkholtsgja</h2>
-                            <p>Mountains & Waterfall</p>
+                            <h2>Kelitsadi Lake</h2>
+                            <p>Lake Trip</p>
                         </div>
 
                     </div>
                     <div class="tour-cards-text">
-                        <h1>Stakkholtsgja canyon Trip</h1>
-                        <p>A Week long trip around the south iceland with hiking guides. Stakkholtsgjá is a wondrous
-                            canyon, situated in Southern part of the Icelandic Highlands. It is highly-known for the
-                            magical hiking trail that leads to a majestic waterfall. The gorge is a part of the Þórsmörk
-                            Nature Reserve. Every bit
-                            of Stakkholtsgjá canyon shines out with picturesque beauty. Stakkholtsgjá is about a hundred
-                            meters deep.</p>
+                        <h1>Kelitsadi Lake</h1>
+                        <p>
+                            Embark on a mesmerizing one-day journey to Kelitsadi Lake in Kazbegi, surrounded by the stunning Caucasus Mountains. 
+                            Enjoy the tranquility of the crystal-clear lake, with an option for a boat ride or a lakeside stroll. 
+                            Cap off the day with a delightful dinner at an authentic Georgian restaurant, savoring the rich flavors of traditional cuisine. 
+                            This brief escape promises a perfect blend of natural beauty and Georgian hospitality, creating unforgettable memories in Kazbegi.</p>
                         <a href="#" class="btn-map">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" stroke-width="2">
@@ -161,8 +154,8 @@
                             <span>View Route Map</span>
                         </a>
                         <div class="price">
-                            <p>$5200 <span>Per person</span></p>
-                            <h2>18 Days 36 Nights</h2>
+                            <p>$150 <span>Per person</span></p>
+                            <h2>1 Day Tour</h2>
                         </div>
                     </div>
                 </div>
