--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iceland Travel</title>
-    <link rel="shortcut icon" href="public/images/logo/icceland.svg" type="image/x-icon">
+    <title>Kazbegi Travel</title>
+    <link rel="shortcut icon" href="public/images/logo/mountain-fav.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,32 +20,7 @@
     <div id="preloadder">
     </div>
 
-    <header class="primary-header">
-        <div class="left-part">
-            <a href="index.html">
-                <img src="public/images/logo/mountain.png" alt="">
-                <div class="logo">
-                    <h1>Kazbegi</h1>
-                </div>
-            </a>
-        </div>
-        <div class="right-part">
-            <div class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sights.html">Sights</a></li>
-                    <li><a href="footage.html">Footage</a></li>
-                    <li><a href="tours.html">Tours</a></li>
-                    <li class="active"><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="ham-menu">
-                <div class="line line-1"></div>
-                <div class="line line-2"></div>
-                <div class="line line-3"></div>
-            </div>
-        </div>
-    </header>
+    <header class="primary-header" id="header-placeholder"></header>
 
     <main>
         <section class="contact" id="contact">
