--- a/contact.html
+++ b/contact.html
@@ -140,6 +140,6 @@
       </div>
     </footer>
 
-    <script src="public/js/main.js"></script>
+    <script type="module" src="public/js/main.js"></script>
   </body>
 </html>
