--- a/footage.html
+++ b/footage.html
@@ -177,8 +177,7 @@
         </div>
       </div>
     </footer>
-    <!-- ----- -->
 
-    <script src="public/js/main.js"></script>
+    <script type="module" src="public/js/main.js"></script>
   </body>
 </html>
