--- a/sights.html
+++ b/sights.html
@@ -158,8 +158,7 @@
         </div>
       </div>
     </footer>
-    <!-- ----- -->
 
-    <script src="public/js/main.js"></script>
+    <script type="module" src="public/js/main.js"></script>
   </body>
 </html>
