--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </footer>
 
-    <script type="module" src="public/js/main.js"></script>
+    <script src="public/js/main.js"></script>
 </body>
 
 </html>
