--- a/sights.html
+++ b/sights.html
@@ -184,6 +184,6 @@
       </div>
     </footer>
 
-    <script type="module" src="public/js/main.js"></script>
+    <script src="public/js/main.js"></script>
   </body>
 </html>
