--- a/tours.html
+++ b/tours.html
@@ -297,6 +297,6 @@
       </div>
     </footer>
 
-    <script type="module" src="public/js/main.js"></script>
+    <script src="public/js/main.js"></script>
   </body>
 </html>
