sights text change

--- a/sights.html
+++ b/sights.html
@@ -97,10 +97,8 @@
         <div class="main-text">
           <h1>Unforgettable Sensations</h1>
           <p>
-            Iceland adventure is a tours of the best places in iceland. We will
-            help make your trip perfect, find the chepest tickets, Book the best
-            hotels Nothing will stop you from enjoying the atmosphere of the ice
-            country.
+            Embark on an unforgettable journey through the stunning landscapes of Kazbegi, Georgia. Our tours ensure a perfect trip, offering affordable tickets and the best hotels. 
+           Every moment is an opportunity to savor the beauty of Georgia's majestic scenery. Your adventure in Kazbegi awaits!
           </p>
         </div>
         <div class="main-container">
