--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     </header>
 
     <main>
-      <section class="contact" id="contact">
+      <section class="contact hcard" id="contact">
         <div class="main-text">
           <h1>Get in touch</h1>
         </div>
@@ -63,6 +63,7 @@
                 placeholder="Enter Your name "
                 id="name"
                 name="name"
+                class="fn"
               />
             </div>
             <div class="phone">
@@ -71,6 +72,7 @@
                 type="text"
                 name="phone"
                 id="phone"
+                class="tel"
                 placeholder="Enter Your Number or phone"
               />
             </div>
