--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <P>Kazbegi Travel offers a great selection of local tours, including hiking, mountain climbing and 
                     guided day
                     tours. Book online.</P>
+                    <p>Built by: Giorgi Natroshvili, Yunis Yunisli, Giorgi Turdziladze & Abdelaziz Shahin</p>
                 <a href="sights.html" class="btn btn-get"><span>Explore</span></a>
             </div>
             </div>
@@ -62,9 +63,9 @@
     </main>
 
     <footer>
-        <div class="main-container">
+        <div class="main-container hcard">
             <div class="heading-foo">
-                <span>
+                <span class="org">
                     <h1>Kazbegi</h1>
                     <img src="public/images/logo/mountain.png" alt="">
                 </span>
