--- a/sights.html
+++ b/sights.html
@@ -51,7 +51,7 @@
     </header>
 
     <main>
-      <section class="explore" id="explore">
+      <section class="explore h-entry" id="explore">
         <div class="main-text">
           <h1>Kazbegi Sights</h1>
           <p>This place amazes with its fabulous atmosphere and nature</p>
@@ -93,7 +93,7 @@
         </div>
       </section>
 
-      <section class="about" id="about">
+      <section class="about h-entry" id="about">
         <div class="main-text">
           <h1>Unforgettable Sensations</h1>
           <p>
@@ -107,7 +107,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="h-card">
       <div class="main-container">
         <div class="heading-foo">
           <span>
