--- a/tours.html
+++ b/tours.html
@@ -51,7 +51,7 @@
     </header>
 
     <main>
-      <section class="tour" id="tour">
+      <section class="tour hreview-aggregate" id="tour">
         <div class="main-text">
           <h1>Tours</h1>
         </div>
@@ -222,9 +222,9 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="hcard">
       <div class="main-container">
-        <div class="heading-foo">
+        <div class="heading-foo org">
           <span>
             <h1>Kazbegi</h1>
             <img src="public/images/logo/mountain.png" alt="" />
