--- a/footage.html
+++ b/footage.html
@@ -33,7 +33,7 @@
         </a>
       </div>
       <div class="right-part">
-        <div class="navbar">
+        <div class="navbar" role="navigation">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="sights.html">Sights</a></li>
