footage load fix

--- a/footage.html
+++ b/footage.html
@@ -58,63 +58,63 @@
         <div class="main-container">
           <div class="image image-1">
             <img
-              src="https://images.unsplash.com/photo-1692262211862-26f4555ef0b7?q=80&w=2533&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/gergeti1.png"
               alt="Gergeti Trinity  Monastery"
             />
             <h3>Gergeti Trinity Monastery</h3>
           </div>
           <div class="image image-2">
             <img
-              src="https://images.unsplash.com/photo-1564774923241-9bfc1c2911d6?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/horses.png"
               alt="Kazbegi horses"
             />
             <h3>Kazbegi horses</h3>
           </div>
           <div class="image image-3">
             <img
-              src="https://images.unsplash.com/photo-1607068798195-d26a9703b277?q=80&w=2694&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/lake1.png"
               alt="Kazbegi Lake"
             />
             <h3>Kazbegi Lake</h3>
           </div>
           <div class="image image-4">
             <img
-              src="https://images.unsplash.com/photo-1563284124-85729a7f8ac7?q=80&w=2676&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/arc.png"
               alt="People’s Friendship Arch"
             />
             <h3>People’s Friendship Arch</h3>
           </div>
           <div class="image image-5">
             <img
-              src="https://images.unsplash.com/photo-1642751904295-3b6532ca4b3b?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/sheep.png"
               alt="Kazbegi Sheep"
             />
             <h3>Kazbegi Sheep</h3>
           </div>
           <div class="image image-6">
             <img
-              src="https://images.unsplash.com/photo-1628361521002-4c91ce36ef52?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/glacier.png"
               alt="Glacier Hike"
             />
             <h3>Glacier Hike</h3>
           </div>
           <div class="image image-7">
             <img
-              src="https://storage.georgia.travel/images/dariali-monastery.webp"
+              src="public/images/footage/dariali.png"
               alt="Dariali Monastery"
             />
             <h3>Dariali Monastery</h3>
           </div>
           <div class="image image-8">
             <img
-              src="https://images.unsplash.com/photo-1621761741271-e14837945fd4?q=80&w=2576&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/waterfall.png"
               alt="Waterfall"
             />
             <h3>Waterfall</h3>
           </div>
           <div class="image image-9">
             <img
-              src="https://images.unsplash.com/photo-1658231514980-006236e4283d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              src="public/images/footage/mountains.png"
               alt="Stepantsminda"
             />
             <h3>Stepantsminda</h3>
